Feature: Add Blooming Rose custom item
Place a sakura zone (cherry log trunk + leaves canopy) for 6s that
protects the same team standing within its 5-block radius:
- -25% damage taken inside the zone
- health cannot drop below the 2-heart floor (heal ticks scaled by
  the shared healing-reduction hook)
- zone expiry or breaking any structure block collapses it and grants
  teammates Regen I for 5s (breaking is the intended counterplay)
- sakura forming-ring + figure-eight placement visual
- holding the item reveals teammate HP on the actionbar (10-tick loop)